@@ -22,10 +22,11 @@ devscripts (2.9.21) UNRELEASED; urgency=low
   * dpkg-genbuilddeps: clean up if statement (Closes: #365372)
   * nmudiff: stop using dpkg-parsechangelog to avoid barfing over broken
     changelogs (Closes: #374773)
+  * rc-alert: now pick up all installed packages (Closes: #370463)
   * uscan: fix handling of recursive http URLs (Closes: #377518)
   * who-depends: convert output into locale charset (Closes: #384835)
 
- -- Julian Gilbey <jdg@debian.org>  Mon, 28 Aug 2006 15:29:30 +0100
+ -- Julian Gilbey <jdg@debian.org>  Mon, 28 Aug 2006 16:08:56 +0100
 
 devscripts (2.9.20) unstable; urgency=low
 
